style(shop): enhance chart actions and recommendations layout for improved usability
- Add year selection dropdowns to chart actions for better data filtering.
- Update button styles and layout for recommendations to enhance visual appeal and interaction.
- Refactor JavaScript to implement click handlers for new recommendation buttons, improving user experience.
- Standardize CSS for buttons and badges to ensure consistency across the shop interface.

--- a/index.html
+++ b/index.html
@@ -299,7 +299,14 @@
                     </div>
                   </div>
                 </div>
-                <div class="chart-actions d-flex gap-2">
+                <div class="chart-actions d-flex gap-2 align-items-center">
+                  <select class="form-select form-select-sm" style="width: 80px; padding: 0.15rem 0.4rem; font-size: 0.92em; border-radius: 6px; border: 1px solid #e2e8f0; background: #f8fafc; color: #1e293b;" title="Select year" id="timeliness-year-select">
+                    <option value="2024">2024</option>
+                    <option value="2023">2023</option>
+                    <option value="2022">2022</option>
+                    <option value="2021">2021</option>
+                    <option value="2020">2020</option>
+                  </select>
                   <button class="chart-action-btn" title="Download" style="width: 32px; height: 32px; border-radius: 8px; border: 1px solid #e2e8f0; background: white; color: #64748b; display: flex; align-items: center; justify-content: center; transition: all 0.2s;">
                     <i class="bi bi-download"></i>
                   </button>
@@ -380,7 +387,14 @@
                   <i class="bi bi-pie-chart-fill me-2" style="color: #6366f1;"></i>
                   Delay Analysis
                 </h2>
-                <div class="chart-actions d-flex gap-2">
+                <div class="chart-actions d-flex gap-2 align-items-center">
+                  <select class="form-select form-select-sm" style="width: 80px; padding: 0.15rem 0.4rem; font-size: 0.92em; border-radius: 6px; border: 1px solid #e2e8f0; background: #f8fafc; color: #1e293b;" title="Select year" id="delay-year-select">
+                    <option value="2024">2024</option>
+                    <option value="2023">2023</option>
+                    <option value="2022">2022</option>
+                    <option value="2021">2021</option>
+                    <option value="2020">2020</option>
+                  </select>
                   <button class="chart-action-btn" title="Download" style="width: 32px; height: 32px; border-radius: 8px; border: 1px solid #e2e8f0; background: white; color: #64748b; display: flex; align-items: center; justify-content: center; transition: all 0.2s;">
                     <i class="bi bi-download"></i>
                   </button>
@@ -457,7 +471,14 @@
                   <i class="bi bi-people-fill me-2" style="color: #6366f1;"></i>
                   Contract
                 </h2>
-                <div class="chart-actions d-flex gap-2">
+                <div class="chart-actions d-flex gap-2 align-items-center">
+                  <select class="form-select form-select-sm" style="width: 80px; padding: 0.15rem 0.4rem; font-size: 0.92em; border-radius: 6px; border: 1px solid #e2e8f0; background: #f8fafc; color: #1e293b;" title="Select year" id="contract-year-select">
+                    <option value="2024">2024</option>
+                    <option value="2023">2023</option>
+                    <option value="2022">2022</option>
+                    <option value="2021">2021</option>
+                    <option value="2020">2020</option>
+                  </select>
                   <button class="chart-action-btn" title="Download" style="width: 32px; height: 32px; border-radius: 8px; border: 1px solid #e2e8f0; background: white; color: #64748b; display: flex; align-items: center; justify-content: center; transition: all 0.2s;">
                     <i class="bi bi-download"></i>
                   </button>
