style(shop): add shop and ESN information section to invoice
- Introduce a new section in the invoice to display shop name and ESN, enhancing the clarity of invoice details.
- Implement corresponding CSS styles for the new invoice info section, ensuring a visually appealing layout.
- Update JavaScript to dynamically populate shop name and ESN based on billing readiness data, improving user experience.

--- a/shop.html
+++ b/shop.html
@@ -657,6 +657,30 @@
               </button>
             </div>
             
+            <!-- Add Shop and ESN Info -->
+            <div class="invoice-info">
+              <div class="info-grid">
+                <div class="info-item">
+                  <div class="info-icon">
+                    <i class="bi bi-shop"></i>
+                  </div>
+                  <div class="info-content">
+                    <span class="info-label">Shop</span>
+                    <span class="info-value" id="invoice-shop-name"></span>
+                  </div>
+                </div>
+                <div class="info-item">
+                  <div class="info-icon">
+                    <i class="bi bi-upc-scan"></i>
+                  </div>
+                  <div class="info-content">
+                    <span class="info-label">ESN</span>
+                    <span class="info-value" id="invoice-esn"></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
             <div class="invoice-cards-container">
               <!-- Invoice Status Card -->
               <div class="invoice-card">
