style(invoice): update draft invoice layout and styles for improved presentation
- Refactor the draft invoice section to enhance visual appeal with updated styles, including a new gradient background and adjusted padding.
- Introduce an icon and reorganize content layout for better clarity and user engagement.
- Modify CSS to remove unnecessary margins and improve overall spacing in the invoice layout.

--- a/invoiceCreation.html
+++ b/invoiceCreation.html
@@ -608,26 +608,38 @@
             <!-- Draft Invoice Content -->
             <div id="step2" class="step-content">
               <div class="invoice-view">
-                <div class="d-flex justify-content-between align-items-center mb-4 p-3" style="
-                  background: linear-gradient(to right, #f8fafc, #f1f5f9);
+                <div class="d-flex justify-content-between align-items-center mb-3 py-2.5 px-4" style="
+                  background: linear-gradient(135deg, #f8fafc 0%, #f1f5f9 100%);
                   border-radius: 12px;
                   border: 1px solid #e2e8f0;
-                  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+                  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+                  position: relative;
+                  overflow: hidden;
                 ">
-                  <div>
-                    <h2 class="mb-1" style="
-                      font-size: 1.5rem;
-                      font-weight: 600;
-                      color: #1e293b;
-                      letter-spacing: -0.01em;
-                    ">Draft Invoice</h2>
-                    <p class="mb-0" style="
-                      font-size: 0.875rem;
-                      color: #64748b;
-                      font-weight: 500;
-                    ">Review and submit invoice</p>
+                  <div class="d-flex align-items-center gap-4">
+                    <div class="d-flex align-items-center justify-content-center" style="
+                      width: 40px;
+                      height: 40px;
+                      background: linear-gradient(135deg, #4338ca 0%, #6366f1 100%);
+                      border-radius: 10px;
+                      box-shadow: 0 2px 4px rgba(99, 102, 241, 0.2);
+                    ">
+                      <i class="bi bi-file-text text-white" style="font-size: 1.25rem;"></i>
+                    </div>
+                    <div>
+                      <h2 class="mb-0.5" style="
+                        font-size: 1.25rem;
+                        font-weight: 600;
+                        color: #1e293b;
+                        letter-spacing: -0.01em;
+                      ">Draft Invoice</h2>
+                      <p class="mb-0" style="
+                        font-size: 0.875rem;
+                        color: #64748b;
+                        font-weight: 500;
+                      ">Review and submit invoice for approval</p>
+                    </div>
                   </div>
-                  
                 </div>
 
                 <!-- Top Section -->
